Fix the header on mobile

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -45,14 +45,6 @@
   }
 }
 
-@media only screen and (min-width: 400px) {
-  .container {
-    padding-right: 20%;
-    padding-left: 20%;
-    padding-bottom: 5%
-  }
-}
-
 .games-main {
   background-image: url(../img/header_animated.svg);
   background-repeat: no-repeat;
